--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,56 +1,59 @@
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "mcp-context-sdk"
-version = "1.0.0"
-description = "A modular, production-ready Python SDK for building structured, context-aware AI systems"
-authors = ["OpenContext AI <team@opencontext.ai>"]
-license = "MIT"
+version = "0.1.0"
+description = "Model Context Protocol SDK for building context-aware AI systems"
+authors = ["Ankit Gautam <ankit.gautam@example.com>"]
 readme = "README.md"
 packages = [{include = "mcp_context_sdk"}]
-repository = "https://github.com/opencontext-ai/mcp-context-sdk"
-documentation = "https://opencontext-ai.github.io/mcp-context-sdk"
-keywords = ["ai", "context", "schema", "llm", "langchain", "autogen"]
+license = "MIT"
+repository = "https://github.com/ankit-gautam23/mcp-context-sdk"
+documentation = "https://ankit-gautam23.github.io/mcp-context-sdk"
+keywords = ["ai", "context", "sdk", "machine-learning", "nlp"]
 classifiers = [
-    "Development Status :: 5 - Production/Stable",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 
 [tool.poetry.dependencies]
 python = "^3.8"
 pydantic = "^2.0.0"
-jsonschema = "^4.0.0"
-click = "^8.0.0"
-yaml = "^5.4.0"
+fastapi = {version = "^0.100.0", optional = true}
+langchain = {version = "^0.0.200", optional = true}
+autogen = {version = "^0.2.0", optional = true}
+
+[tool.poetry.extras]
+fastapi = ["fastapi"]
+langchain = ["langchain"]
+autogen = ["autogen"]
+all = ["fastapi", "langchain", "autogen"]
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^6.2.0"
+pytest = "^7.0.0"
 black = "^23.0.0"
 isort = "^5.12.0"
+flake8 = "^6.0.0"
 mypy = "^1.0.0"
-ruff = "^0.1.0"
-
-[tool.poetry.group.integrations.dependencies]
-langchain = "^0.0.200"
-pyautogen = "^0.2.0"
-fastapi = "^0.100.0"
-uvicorn = "^0.22.0"
-streamlit = "^0.85.0"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.scripts]
 mcp = "mcp_context_sdk.cli:main"
 
 [tool.black]
 line-length = 88
-target-version = ["py38"]
+target-version = ['py38']
+include = '\.pyi?$'
 
 [tool.isort]
 profile = "black"
@@ -61,11 +64,12 @@ python_version = "3.8"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+disallow_incomplete_defs = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
-addopts = "-v --cov=mcp_context_sdk"
+addopts = "--cov=mcp_context_sdk --cov-report=term-missing"
 
 [tool.coverage.run]
 source = ["mcp_context_sdk"]
