--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, '3.10', '3.11']
+        python-version: ['3.10']  # Simplified to just 3.10 for now
 
     steps:
     - uses: actions/checkout@v3
@@ -27,11 +27,18 @@ jobs:
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
     
+    - name: Configure Poetry
+      run: |
+        poetry config virtualenvs.create true
+        poetry config virtualenvs.in-project true
+    
     - name: Install dependencies
-      run: poetry install
+      run: |
+        poetry install --no-interaction --no-root
     
     - name: Run tests
-      run: poetry run pytest
+      run: |
+        poetry run pytest --cov=mcp_context_sdk --cov-report=term-missing
     
     - name: Run linting
       run: |
@@ -69,6 +76,11 @@ jobs:
     - name: Install Poetry
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
+    
+    - name: Configure Poetry
+      run: |
+        poetry config virtualenvs.create true
+        poetry config virtualenvs.in-project true
     
     - name: Build package
       run: poetry build
